--- a/app/src/main/res/layout/activity_stop_details.xml
+++ b/app/src/main/res/layout/activity_stop_details.xml
@@ -17,7 +17,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#088F8F">
 
             <TextView
                 android:id="@+id/tv_StopNo"
